eda-external-packages/eda-api-ingress-https-passthrough/api-ingress-ssl-passthrough.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eda-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true" ## Terminate HTTPS from the client at the eda-api service
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/add-base-url: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600" # 10 minute read timeout for proxy request responses
    nginx.ingress.kubernetes.io/server-snippet: |
      client_header_buffer_size 128k;
      large_client_header_buffers 4 128k;
spec:
  rules:
  - host: "" # kpt-set: ${EXT_DOMAIN_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eda-api
            port:
              number: 443
  ingressClassName: nginx
  # tls:
  # - hosts:
  #   - ${EXT_DOMAIN_NAME} # kpt-set: ${EXT_DOMAIN_NAME}
  #   secretName: eda-api-ca
